--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/main.scss -o src/styles",
-    "watch-css": "npm run build-css && node-sass-chokidar src/styles/main.scss -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/main.scss -o src/styles --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build && react-snapshot && node deploy-scripts/rename-snapshot.js",
     "postbuild": "rimraf build/**/*.map",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "cross-env S3_HOSTING_BUCKET=our-tutorial-site node deploy-scripts/sync-to-s3.js"
+    "deploy": "cross-env S3_HOSTING_BUCKET=technerd node deploy-scripts/sync-to-s3.js"
   },
   "reactSnapshot": {
     "include": [
