Rename all scss files

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/main.scss -o src/styles",
-    "watch-css": "npm run build-css && node-sass-chokidar src/styles/main.scss -o src/styles --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/main.scss -o src/styles/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build && react-snapshot && node deploy-scripts/rename-snapshot.js",
